--- a/PathFinderTest/PathFinderTest.csproj
+++ b/PathFinderTest/PathFinderTest.csproj
@@ -4,6 +4,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="SharpNoise" Version="0.11.0" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\PathFinder\PathFinder.csproj" />
   </ItemGroup>
 </Project>
