--- a/PathFinder/PathFinder.csproj
+++ b/PathFinder/PathFinder.csproj
@@ -1,5 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageVersion>0.1.0</PackageVersion>
+    <Title>PathFinder</Title>
+    <Authors>Kevin Gravier</Authors>
+    <Description>A generic, customizable A-Star path finding implementation.</Description>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
+  </ItemGroup>
 </Project>
