--- a/PathFinderTest/PathFinderTest.csproj
+++ b/PathFinderTest/PathFinderTest.csproj
@@ -1,12 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <LangVersion>7.3</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="SharpNoise" Version="0.11.0" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\PathFinder\PathFinder.csproj" />
+    <ProjectReference Include="..\SimpleWorld\SimpleWorld.csproj" />
   </ItemGroup>
 </Project>
