--- a/PathFinderGui/PathFinderGui.Desktop/PathFinderGui.Desktop.csproj
+++ b/PathFinderGui/PathFinderGui.Desktop/PathFinderGui.Desktop.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net47</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
