--- a/PathFinderGui/PathFinderGui.Desktop/PathFinderGui.Desktop.csproj
+++ b/PathFinderGui/PathFinderGui.Desktop/PathFinderGui.Desktop.csproj
@@ -2,7 +2,8 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net47</TargetFramework>
+        <LangVersion>default</LangVersion>
+        <TargetFramework>net5.0-windows</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -10,8 +11,9 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Eto.Platform.Wpf" Version="2.4.1" />
-        <PackageReference Include="Eto.Platform.Gtk" Version="2.4.1" />
+        <PackageReference Include="Eto.Forms" Version="2.5.10" />
+        <PackageReference Include="Eto.Platform.Wpf" Version="2.5.10" />
+        <PackageReference Include="Eto.Platform.Gtk" Version="2.5.10" />
     </ItemGroup>
 
 </Project>
