--- a/PathFinderGui/PathFinderGui.Desktop/PathFinderGui.Desktop.csproj
+++ b/PathFinderGui/PathFinderGui.Desktop/PathFinderGui.Desktop.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <LangVersion>default</LangVersion>
-        <TargetFramework>net5.0-windows</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
