--- a/PathFinderGui/PathFinderGui/PathFinderGui.csproj
+++ b/PathFinderGui/PathFinderGui/PathFinderGui.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>netcoreapp3.1</TargetFramework>
         <RootNamespace>PathFinderGui</RootNamespace>
         <PackageVersion>1.0</PackageVersion>
         <Title>PathFinderGui</Title>
         <Copyright>Copyright © 2019</Copyright>
         <Description>Description of PathFinderGui</Description>
+        <LangVersion>9</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
