--- a/PathFinderGui/PathFinderGui.Desktop/PathFinderGui.Desktop.csproj
+++ b/PathFinderGui/PathFinderGui.Desktop/PathFinderGui.Desktop.csproj
@@ -12,8 +12,9 @@
 
     <ItemGroup>
         <PackageReference Include="Eto.Forms" Version="2.5.10" />
-        <PackageReference Include="Eto.Platform.Wpf" Version="2.5.10" />
-        <PackageReference Include="Eto.Platform.Gtk" Version="2.5.10" />
+        <PackageReference Condition="'$(OS)' == 'Unix'" Include="Eto.Platform.Gtk" Version="2.5.10" />
+        <PackageReference Condition="'$(OS)' == 'Windows_NT'" Include="Eto.Platform.Wpf" Version="2.5.10" />
+        <PackageReference Condition="'$(OS)' == 'Unix'" Include="GtkSharp" Version="3.24.24.34" />
     </ItemGroup>
 
 </Project>
