Moved testing and extra projects into "Extras" folder for better organization

--- a/Extras/PathFinderConsole/PathFinderConsole.csproj
+++ b/Extras/PathFinderConsole/PathFinderConsole.csproj
@@ -5,8 +5,7 @@
     <LangVersion>default</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\PathFinder\PathFinder.csproj" />
-    <ProjectReference Include="..\SequenceBuilder\SequenceBuilder.csproj" />
+    <ProjectReference Include="..\..\PathFinder\PathFinder.csproj" />
     <ProjectReference Include="..\SimpleWorld\SimpleWorld.csproj" />
   </ItemGroup>
 </Project>
