--- a/Extras/SimpleWorld/SimpleWorld.csproj
+++ b/Extras/SimpleWorld/SimpleWorld.csproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\PathFinder\PathFinder.csproj" />
+      <ProjectReference Include="..\..\PathFinder\PathFinder.csproj" />
     </ItemGroup>
 
     <ItemGroup>
