--- a/Extras/PathFinderBenchmark/PathFinderBenchmark.csproj
+++ b/Extras/PathFinderBenchmark/PathFinderBenchmark.csproj
@@ -11,7 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\PathFinder\PathFinder.csproj" />
+      <ProjectReference Include="..\..\PathFinder\PathFinder.csproj" />
       <ProjectReference Include="..\SimpleWorld\SimpleWorld.csproj" />
     </ItemGroup>
 
