--- a/Extras/PathFinderGui/PathFinderGui/PathFinderGui.csproj
+++ b/Extras/PathFinderGui/PathFinderGui/PathFinderGui.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\PathFinder\PathFinder.csproj" />
+      <ProjectReference Include="..\..\..\PathFinder\PathFinder.csproj" />
       <ProjectReference Include="..\..\SimpleWorld\SimpleWorld.csproj" />
     </ItemGroup>
 
