Changed from using SortedSet to C5.IntervalHash for storing open nodes. Testing shows a 5-10% improvement in solving time.
Also removed Reset from AStar as its not valuable.

--- a/PathFinder/PathFinder.csproj
+++ b/PathFinder/PathFinder.csproj
@@ -9,6 +9,7 @@
     <TargetFramework>netstandard1.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="C5" Version="2.5.3" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.1.0" />
   </ItemGroup>
 </Project>
