--- a/Extras/PathFinder.Gui/PathFinder.Gui.Desktop/PathFinder.Gui.Desktop.csproj
+++ b/Extras/PathFinder.Gui/PathFinder.Gui.Desktop/PathFinder.Gui.Desktop.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\PathFinderGui\PathFinderGui.csproj" />
+        <ProjectReference Include="..\PathFinder.Gui\PathFinder.Gui.csproj" />
     </ItemGroup>
 
     <ItemGroup>
