Added PathFinder.Supplement from generated docs

--- a/Extras/PathFinder.DocFx/filterConfig.yml
+++ b/Extras/PathFinder.DocFx/filterConfig.yml
@@ -2,3 +2,5 @@
 - exclude:
     hasAttribute:
       uid: PathFinder.Supplement.DocsHiddenAttribute
+- exclude:
+    uidRegex: ^PathFinder\.Supplement.*$
