--- a/.github/workflows/deploy-api-docs.yml
+++ b/.github/workflows/deploy-api-docs.yml
@@ -1,9 +1,7 @@
-﻿name: Build and Deploy API Documentation
+﻿name: Deploy API Documentation
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
     branches: [ master ]
 
 jobs:
