--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -1,10 +1,10 @@
-name: Build and Test
+name: Run Unit Tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [ master, develop ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop ]
 
 jobs:
   build:
@@ -25,3 +25,4 @@ jobs:
       run: dotnet build --no-restore PathFinder.UnitTests
     - name: Test
       run: dotnet test --no-build --verbosity normal PathFinder.UnitTests
+
