--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -2,9 +2,9 @@ name: Run Unit Tests
 
 on:
   push:
-    branches: [ master, develop ]
+    branches: [ master, development ]
   pull_request:
-    branches: [ master, develop ]
+    branches: [ master, development ]
 
 jobs:
   unit-tests:
