Fixed icon for nuget package

--- a/PathFinder/PathFinder.csproj
+++ b/PathFinder/PathFinder.csproj
@@ -20,10 +20,14 @@ Currently a work in progress and API's may change until version 1.</Description>
     <RepositoryType>git</RepositoryType>
     <PackageTags>Path Finding, A*, AStar, Breadth-First, Graph</PackageTags>
     <PackageId>Gravy.PathFinder</PackageId>
+    <PackageIcon>icon.png</PackageIcon>
     <PackageIconUrl>https://raw.githubusercontent.com/mrkmg/PathFinder/master/icon.png</PackageIconUrl>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="C5" Version="2.5.3" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.1.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="icon.png" Pack="true" PackagePath="\"/>
   </ItemGroup>
 </Project>
