Added profiler api to benchmark profile feature

--- a/Extras/PathFinder.Benchmark/PathFinder.Benchmark.csproj
+++ b/Extras/PathFinder.Benchmark/PathFinder.Benchmark.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
+      <PackageReference Include="JetBrains.Profiler.Api" Version="1.1.7" />
     </ItemGroup>
 
     <ItemGroup>
